[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockyard"
version = "0.1.0"
description = "CLI-first context and resume system for multi-repo development."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Dockyard"}]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
dock = "dockyard.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
